--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@splidejs/svelte-splide": "^0.2.9"
+		"@splidejs/svelte-splide": "^0.2.9",
+		"vanilla-tilt-svelte": "^1.0.4"
 	}
 }
