Ui ! Be: More Responsive, add Api, Dashboard Crud, connect to api, database Supabase

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
 	"type": "module",
 	"dependencies": {
 		"@splidejs/svelte-splide": "^0.2.9",
+		"@supabase/ssr": "^0.5.1",
+		"@supabase/supabase-js": "^2.46.1",
+		"sweetalert2": "^11.14.5",
+		"swiper": "^11.1.14",
 		"vanilla-tilt-svelte": "^1.0.4"
 	}
 }
